XCOMMONS-87: Automate Jenkins Job Creation * Update deps and upgrade to version 0.2.5 of the Jenkins plugin